--- a/batman/level1.html
+++ b/batman/level1.html
@@ -201,7 +201,7 @@ function update() {
     if (score == 100){
         setTimeout(() => game.add.text(330, 100, 'You Win!', { fontSize: '40px', fill: '#ffd799'}), 500);
         
-        setTimeout(() => {window.location = 'level2.html'}, 4000)
+        setTimeout(() => {window.location = 'level2.html'}, 3000);
     }
 
     // helper
