--- a/batman/level2.html
+++ b/batman/level2.html
@@ -2,7 +2,7 @@
 <html lang="en"> 
 <head> 
 	<meta charset="UTF-8" />
-	<title>Phaser - Making your first game, part 2</title>
+	<title>Level 2</title>
     <script src="//cdn.jsdelivr.net/phaser/2.2.2/phaser.min.js"></script>
     <script type="text/javascript" src="Bullet.js"></script>
     <script type="text/javascript" src="Slime.js"></script>
@@ -93,7 +93,7 @@ function create() {
 
 
     // The player and its settings
-    player = game.add.sprite(32, game.world.height - 150, 'batman');
+    player = game.add.sprite(85, game.world.height - 95, 'batman');
 
     //  Player physics properties. Give the little guy a slight bounce.
     game.physics.arcade.enable(player);
