--- a/level1.html
+++ b/level1.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="Slime.js"></script>
     <script type="text/javascript" src="HealthBar.js"></script>
     <script type="text/javascript" src="Cheats.js"></script>
+    <script type="text/javascript" src="vendor/tock.min.js"></script>
     <style type="text/css">
         body {
             margin: 0;
