--- a/level2.html
+++ b/level2.html
@@ -6,6 +6,7 @@
     <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
     <script type="text/javascript" src="Bullet.js"></script>
     <script type="text/javascript" src="Slime.js"></script>
+    <script type="text/javascript" src="Star.js"></script>
     <script type="text/javascript" src="HealthBar.js"></script>
     <style type="text/css">
         body {
@@ -25,7 +26,7 @@ function preload() {
     game.load.image('ground', 'assets/platform.png');
     game.load.spritesheet('batman', 'assets/batman.png', 32, 32);
     game.load.spritesheet('batarang', 'assets/batarang.png', 9, 9);
-    game.load.spritesheet('slime', 'assets/slime 2.png', 28, 28);
+    game.load.spritesheet('slime', 'assets/slime.png', 28, 28);
 }
 
 var platforms;
