--- a/level4.html
+++ b/level4.html
@@ -6,6 +6,7 @@
     <script src="//cdn.jsdelivr.net/phaser/2.6.2/phaser.min.js"></script>
     <script type="text/javascript" src="Bullet.js"></script>
     <script type="text/javascript" src="Slime.js"></script>
+    <script type="text/javascript" src="Star.js"></script>
     <script type="text/javascript" src="HealthBar.js"></script>
     <style type="text/css">
         body {
@@ -29,7 +30,7 @@ function preload() {
     game.load.image('ground5', 'assets/platform5.png');
     game.load.spritesheet('batman', 'assets/batman.png', 32, 32);
     game.load.spritesheet('batarang', 'assets/batarang.png', 9, 9);
-    game.load.spritesheet('slime', 'assets/slime 2.png', 28, 28);
+    game.load.spritesheet('slime', 'assets/slime.png', 28, 28);
 }
 
 var platforms;
@@ -243,7 +244,7 @@ function update() {
     if (score == 100){
         setTimeout(() => game.add.text(340, 165, 'You Win!', { fontSize: '40px', fill: '#ffd799'}), 500);
         
-        // setTimeout(() => {window.location = 'level5.html'}, 3000);
+        setTimeout(() => {window.location = 'level5.html'}, 3000);
     }
 
     // helper
