--- a/level1.html
+++ b/level1.html
@@ -198,6 +198,7 @@ function update() {
 
     if (playerHealth == 1) {
         player.kill();
+        store.set('score', 0);
         setTimeout(() => game.add.text(315, 100, 'Game Over', { fontSize: '30px', fill: '#000' }), 500);
         setTimeout(() => location.reload(), 1500);
     }
@@ -214,6 +215,7 @@ function update() {
     }
 
     if (stars.countLiving() == 0){
+        store.set('score', score);
         setTimeout(() => game.add.text(315, 100, 'You Win!', { fontSize: '30px', fill: '#ffd799'}), 500);
         
         setTimeout(() => {window.location = 'level2.html'}, 3000);
