--- a/level4.html
+++ b/level4.html
@@ -8,6 +8,7 @@
     <script type="text/javascript" src="Bullet.js"></script>
     <script type="text/javascript" src="Slime.js"></script>
     <script type="text/javascript" src="HealthBar.js"></script>
+    <script type="text/javascript" src="Cheats.js"></script>
     <style type="text/css">
         body {
             margin: 0;
@@ -228,14 +229,14 @@ function create() {
         [725, 440]
 ];
 
-    let offset = 250;
+    // let offset = 250;
     slimeLocations.forEach(function (location) {
 
-        setTimeout(() => {
+        // setTimeout(() => {
             var slime = new Slime(game, location[0], location[1]);
             slimes.add(slime);    
-        }, 500 + offset);
-        offset += 500;
+        // }, 500 + offset);
+        // offset += 500;
 
     });
     
@@ -264,7 +265,7 @@ function update() {
 
     // health and stuffs
 
-    if (hitSlime && ! invincible) {
+    if (hitSlime && ! invincible && ! cheats.check('god')) {
         playerHealth -= 33;
         healthbar.setPercent(playerHealth);
         makeInvincible();
