wip: have splash screen loading

--- a/level3.html
+++ b/level3.html
@@ -33,14 +33,14 @@ var game = new Phaser.Game(800, 600, Phaser.AUTO, '', { preload: preload, create
 
 function preload() {
 
-    game.load.image('sky', 'assets/sky.png');
-    game.load.image('ground', 'assets/platform.png');
-    game.load.image('ground2', 'assets/platform2.png');
-    game.load.image('ground3', 'assets/platform3.png');
-    game.load.spritesheet('batman', 'assets/batman.png', 32, 32);
-    game.load.spritesheet('batarang', 'assets/batarang.png', 9, 9);
-    game.load.spritesheet('slime', 'assets/slime.png', 28, 28);
-    game.load.spritesheet('star', 'assets/star.png');
+    // game.load.image('sky', 'assets/sky.png');
+    // game.load.image('ground', 'assets/platform.png');
+    // game.load.image('ground2', 'assets/platform2.png');
+    // game.load.image('ground3', 'assets/platform3.png');
+    // game.load.spritesheet('batman', 'assets/batman.png', 32, 32);
+    // game.load.spritesheet('batarang', 'assets/batarang.png', 9, 9);
+    // game.load.spritesheet('slime', 'assets/slime.png', 28, 28);
+    // game.load.spritesheet('star', 'assets/star.png');
 }
 
 var platforms;
