--- a/level1.html
+++ b/level1.html
@@ -36,7 +36,7 @@ function preload() {
     game.load.image('sky', 'assets/sky.png');
     game.load.image('ground', 'assets/platform.png');
     game.load.image('ground2', 'assets/platform6.png');
-    game.load.spritesheet('batman', 'assets/batman.png', 32, 32);
+    game.load.spritesheet('batman', 'assets/batman2.png', 32, 32);
     game.load.spritesheet('batarang', 'assets/batarang.png', 9, 9);
     game.load.spritesheet('slime', 'assets/slime.png', 28, 28);
     game.load.spritesheet('star', 'assets/star.png');
@@ -107,9 +107,9 @@ function create() {
 
     //  Our three animations, walking left ,right and jumping.
     player.animations.add('left', [0, 1, 2, 3], 10, true);
-    player.animations.add('right', [5, 6, 7, 8], 10, true);
-    player.animations.add('jumpleft', [10], 10, true);
-    player.animations.add('jumpright', [9], 10, true);
+    player.animations.add('right', [6, 7, 8, 9], 10, true);
+    player.animations.add('jumpleft', [11], 10, true);
+    player.animations.add('jumpright', [10], 10, true);
 
     // Health bar
     var barConfig = {x: 200, y: 100};
@@ -269,11 +269,14 @@ function update() {
         player.animations.play(animation);
 
     } else {
-        //  Stand still
         player.animations.stop();
-
+        //  Stand still
         if (playerIsOnGround()) {
-            player.frame = 4;
+            player.frame = 4
+        }
+
+        else if (playerIsOnGround()) {
+            player.frame = 5;
         }
     }
 
