--- a/level1.html
+++ b/level1.html
@@ -110,6 +110,8 @@ function create() {
     player.animations.add('right', [6, 7, 8, 9], 10, true);
     player.animations.add('jumpleft', [11], 10, true);
     player.animations.add('jumpright', [10], 10, true);
+    player.animations.add('standleft', [4], 10, true);
+    player.animations.add('standright', [5], 10, true);
 
     // Health bar
     var barConfig = {x: 200, y: 100};
@@ -268,22 +270,20 @@ function update() {
         let animation = playerIsOnGround() ? 'right' : 'jumpright';
         player.animations.play(animation);
 
-    } else {
-        player.animations.stop();
+    } else if (cursors.right.onUp || cursors.left.onUp){
         //  Stand still
-        if (playerIsOnGround()) {
-            player.frame = 4
-        }
+        player.animations.stop();
 
-        else if (playerIsOnGround()) {
-            player.frame = 5;
-        }
+        player.body.velocity.x = 0;
+            
+        let animation = playerIsOnGround() ? 'standright' : 'standleft';
+        player.animations.play(animation);
     }
 
     // Allow the player to jump if they are touching the ground.
     if (cursors.up.isDown && player.body.touching.down && hitPlatform)
     {
-        player.frame = 9;
+        player.frame = 10;
         player.body.velocity.y = -350;
     }
 
