--- a/level5.html
+++ b/level5.html
@@ -40,7 +40,7 @@ function preload() {
     game.load.image('ground4', 'assets/platform4.png');
     game.load.image('ground5', 'assets/platform5.png');
     game.load.spritesheet('batman', 'assets/batman.png', 32, 32);
-    game.load.spritesheet('batarang', 'assets/batarang.png', 9, 9);
+    game.load.spritesheet('batarang', 'assets/batarang.png', 13, 13);
     game.load.spritesheet('slime', 'assets/slime.png', 28, 28);
     game.load.spritesheet('star', 'assets/star.png');
 }
@@ -157,9 +157,11 @@ function create() {
 
     //  Our three animations, walking left ,right and jumping.
     player.animations.add('left', [0, 1, 2, 3], 10, true);
-    player.animations.add('right', [5, 6, 7, 8], 10, true);
-    player.animations.add('jumpleft', [10], 10, true);
-    player.animations.add('jumpright', [9], 10, true);
+    player.animations.add('right', [6, 7, 8, 9], 10, true);
+    player.animations.add('jumpleft', [11], 10, true);
+    player.animations.add('jumpright', [10], 10, true);
+    player.animations.add('standleft', [4], 10, true);
+    player.animations.add('standright', [5], 10, true);
 
     // Health bar
     var barConfig = {x: 200, y: 100};
@@ -302,33 +304,30 @@ function update() {
     if (cursors.left.isDown) {
 
         player.body.velocity.x = -150;
-
         let animation = playerIsOnGround() ? 'left' : 'jumpleft';
         player.animations.play(animation);
 
     } else if (cursors.right.isDown) {
 
         player.body.velocity.x = 150;
-
         let animation = playerIsOnGround() ? 'right' : 'jumpright';
         player.animations.play(animation);
 
-    } else {
+    } else if (cursors.right.onUp || cursors.left.onUp) {
         //  Stand still
         player.animations.stop();
 
         if (playerIsOnGround()) {
-            player.frame = 4;
+            let animation = direction == 1 ? 'standright' : 'standleft';
+            player.animations.play(animation);
         }
     }
-
     // Allow the player to jump if they are touching the ground.
     if (cursors.up.isDown && player.body.touching.down && hitPlatform)
     {
-        player.frame = 9;
+        player.frame = 10;
         player.body.velocity.y = -350;
     }
-
 }
 
 </script>
